@@ -1,5 +1,10 @@
 2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* src/sj-main.c:
+	Add --play to start playing automatically.
+
+2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* data/sound-juicer.glade:
 	  Remove Re-read option from main window, since this is triggered
 	  automatically on a CD insert.
